Fixed spacing issue to ensure the projects section title isn't covered by the navbar

--- a/PJ7/src/style.css
+++ b/PJ7/src/style.css
@@ -134,7 +134,7 @@ main {
 }
 
 .projects {
-  padding: 2.5rem 5rem;
+  padding: 5rem 5rem;
   text-align: center;
   width: 100%;
 }
